# Multi-Agent-RAG-System

./: .env.example  .gitignore  LICENSE  PROJECT_MAP.md  README.md  chat.py  pyproject.toml  requirements.txt
ai/config/: settings.py
ai/graph/: __init__.py  builder.py  registry.py  router.py  state.py
ai/graph/nodes/: formatter.py  memory.py  merge.py  operations.py  planner.py  rag.py  validator.py
ai/models/: __init__.py  schemas.py
ai/prompts/: __init__.py  formatter.md  operations.md  planner.md  rag.md  registry.py  validator.md
ai/rag/: __init__.py  chunker.py  context.py  embeddings.py  indexer.py  loader.py  pipeline.py  retriever.py
ai/tools/: __init__.py  registry.py  restaurant_tools.py
app/: main.py
app/api/: routes.py
app/dependencies/: __init__.py
data/: restaurant_menu.txt  restaurant_policies.txt
tests/: test_merge.py  test_models.py  test_planner.py  test_rag.py  test_router.py  test_tools.py  test_validator.py
